E: add JPMS module-info and update dependencies

--- a/original/pom.xml
+++ b/original/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>approvaltests</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
