--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>original</module>
         <module>attempt01</module>
+        <module>attempt011</module>
     </modules>
 
     <properties>
